proxima/apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-whoami
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: apps-whoami
  replicas: 1 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apps-whoami
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: 5etools
        image: traefik/whoami:latest
        ports:
          - containerPort: 80
            name: http
        securityContext:
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
